feat: add FavouriteBoards functionality
